# pen_and_paper

./: CMakeLists.txt  README.md
experiments/: CMakeLists.txt
experiments/sslSocketTest/: CMakeLists.txt  Client.cpp  Client.h  Helper.h  Server.cpp  Server.h  Socket.cpp  Socket.h  client_main.cpp  main.cpp  server.cert.sh  server.crt  server.key  server_main.cpp  test.pro
src/: CMakeLists.txt
src/libCore/: AbstractComponent.h  AbstractException.h  AbstractFactory.h  AbstractFactoryHolding.h  CMakeLists.txt  Core.cpp  Core.h
src/libCore/dds/: AbstractTopic.h  DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  Exception.h  Operation.h  SerializationContainer.h  SerializationFormat.h  SerializationMode.h  TopicExchange.cpp  TopicExchange.h  TopicType.h
src/libCore/dds/stl/: convenience.h
src/libCore/test/: CMakeLists.txt  FactoryHoldingTest.cpp  main.cpp  test.h
src/libDDS/: AbstractParticipant.cpp  AbstractParticipant.h  AbstractTopic.h  AbstractTopicExchange.h  CMakeLists.txt  DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  Exception.h  ExceptionUnimplemented.h  MonotonicClock.h  Operation.h  Participant.cpp  Participant.h  ParticipantId.h  SerializationContainer.h  SerializationFormat.h  TopicExchange.cpp  TopicExchange.h  TopicType.h
src/libDDS/stl/: convenience.h
src/libDDS/test/: CMakeLists.txt  DDS.gtest.h  TopicExchangeTest.cpp  inspectTopic.cpp
src/libDDS/topics/: ParticipantRegistration.cpp  ParticipantRegistration.h  TopicSubscription.cpp  TopicSubscription.h
tests/: CMakeLists.txt
tests/unittestsuite/: CMakeLists.txt  main.cpp
